--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingStart="@dimen/layout_padding"
-    android:paddingEnd="16dp"
+    android:paddingEnd="@dimen/layout_padding"
     tools:context=".MainActivity">
 
     <TextView
@@ -16,16 +16,14 @@
         android:layout_height="wrap_content"
         android:text="@string/name"
         android:textAlignment="center" />
-
     <EditText
         android:id="@+id/nickname_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:autofillHints=""
-        android:ems="10"
-        android:hint="@string/name"
+        style="@style/NameStyle"
+        android:hint="@string/what_is_your_nickname"
         android:inputType="textPersonName"
-        android:minHeight="48dp"
         android:textAlignment="center"
         tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />
 
@@ -41,9 +39,7 @@
     <ScrollView
         android:id="@+id/bio_scroll"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingStart="@dimen/layout_padding"
-        android:paddingEnd="@dimen/layout_padding">
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/bio_text"
